--- a/public/global/css/bootstrap/bootstrap.css
+++ b/public/global/css/bootstrap/bootstrap.css
@@ -2376,8 +2376,8 @@ input[type="button"].btn-block {
 @font-face {
   font-family: 'Glyphicons Halflings';
 
-  src: url('../../../ErrorApp/fonts/glyphicons-halflings-regular.eot');
-  src: url('../../../ErrorApp/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../../../ErrorApp/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../../../ErrorApp/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../../../ErrorApp/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('/public/global/fonts/glyphicons-halflings-regular.eot');
+  src: url('/public/global/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/public/global/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/public/global/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/public/global/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
